openshift-yaml-glpi.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: glpi-mariadb
spec:
  replicas: 1
  selector:
    matchLabels:
      app: glpi-mariadb
  template:
    metadata:
      labels:
        app: glpi-mariadb
    spec:
      containers:
      - name: mariadb
        image: docker.io/library/mariadb:10.11
        ports:
        - containerPort: 3306
        volumeMounts:
        - name: mariadb-data
          mountPath: /var/lib/mysql
      volumes:
      - name: mariadb-data
        emptyDir: {}
---
apiVersion: v1
kind: Service
metadata:
  name: glpi-mariadb
spec:
  selector:
    app: glpi-mariadb
  ports:
  - port: 3306
    targetPort: 3306
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: glpi
spec:
  replicas: 1
  selector:
    matchLabels:
      app: glpi
  template:
    metadata:
      labels:
        app: glpi
    spec:
      containers:
      - name: glpi
        image: docker.io/glpi/glpi:10.0.25
        ports:
        - containerPort: 80
        volumeMounts:
        - name: glpi-data
          mountPath: /var/glpi
      volumes:
      - name: glpi-data
        emptyDir: {}
---
apiVersion: v1
kind: Service
metadata:
  name: glpi
spec:
  selector:
    app: glpi
  ports:
  - port: 80
    targetPort: 80
---
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  labels:
    app: webapp-color
  name: webapp-color
spec:
  to:
    kind: Service
    name: webapp-color
  tls:
    termination: edge
